# esp32-c6

./: .gitignore  .rumdl.toml  404.html  CONTRIBUTING.md  README.md  index.html  other_resources.html  print.html  searcher-c2a407aa.js  searchindex-06437900.js  searchindex-ad92deea.js  toc-190cdb1e.js  toc.html
.github/workflows/: publish.yml
book/: book.toml
book/src/: SUMMARY.md  index.md  other_resources.md
book/src/assets/: spi.dot  uart.dot
book/src/ch_1/: definitions.md  hw_and_sw.md
book/src/ch_2/: blinky.md  boilerplate.md  handle_input.md  hello_world.md  panic.md
book/src/ch_3/: gdb.md  gdb_commands.md  gdb_set_up.md  logging_0.md  logging_1.md
book/src/ch_4/: i2c.md  spi.md  uart_1.md  uart_2.md  what_for.md
ch_1/: definitions.html  hw_and_sw.html
ch_2/: blinky.html  boilerplate.html  handle_input.html  hello_world.html  panic.html
ch_3/: gdb.html  gdb_commands.html  gdb_set_up.html  logging_0.html  logging_1.html
ch_4/: i2c.html  uart_1.html  uart_2.html  what_for.html
exercises/: update_all.sh
exercises/blinky/: Cargo.toml  rust-toolchain.toml
exercises/blinky/.cargo/: config.toml
exercises/blinky/examples/: blinky.rs
exercises/blinky/src/: main.rs
exercises/gdb_hello_world/: Cargo.toml  README.md  gdbinit  openocd.cfg
exercises/gdb_hello_world/.cargo/: config.toml
exercises/gdb_hello_world/src/: main.rs
exercises/handle_input/: Cargo.toml
exercises/handle_input/.cargo/: config.toml
exercises/handle_input/examples/: handle_input.rs
exercises/handle_input/src/: main.rs
exercises/hello_world/: .gdbinit  Cargo.toml  rust-toolchain.toml
exercises/hello_world/.cargo/: config.toml
exercises/hello_world/examples/: hello_world.rs
exercises/hello_world/src/: main.rs
exercises/logging/: Cargo.toml  rust-toolchain.toml
exercises/logging/.cargo/: config.toml
exercises/logging/examples/: logging_0.rs  logging_1.rs
exercises/logging/src/: main.rs
exercises/panic/: Cargo.toml  rust-toolchain.toml
exercises/panic/.cargo/: config.toml
exercises/panic/examples/: panic.rs
exercises/panic/src/: main.rs
exercises/uart/: Cargo.toml  rust-toolchain.toml
exercises/uart/.cargo/: config.toml
exercises/uart/examples/: uart.rs
exercises/uart/src/: main.rs
